# help-desk

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  schema.drawio
src/adapters/api/: __init__.py  _base_schema.py  app.py  deps.py  exception.py
src/adapters/api/auth/: _router.py  _schemas.py
src/adapters/api/role/: _exception.py  _router.py  _schemas.py
src/adapters/api/user/: _exception.py  _router.py  _schemas.py
src/alembic/: env.py
src/alembic/versions/: 20231112_154047_a57e2d711bc8_create_table.py  20231119_112036_b2b0cdcd7ca7_init.py  20231119_125812_94943dc041a0_init.py  20240307_193601_034403df6769_added_new_user_table.py  20240309_165013_a94fc749f07e_1st_migrate.py  20240309_205258_ad4160f7eb58_added_m2m.py  20240311_185453_f8cf28f80d17_added_last_login.py
src/app/db/base/: __init__.py  declarative_base.py  engine.py  types.py
src/app/db/models/: __init__.py  _division.py  _user.py
src/core/: dto.py  errors.py  exception.py  security.py
src/core/domain/auth/: command.py  dto.py  service.py
src/core/domain/role/: command.py  dto.py  exception.py  repository.py  service.py  utils.py
src/core/domain/user/: command.py  dto.py  repository.py  service.py
src/db/base/: __init__.py  declarative_base.py  dependencies.py  engine.py  types.py
src/db/constants/: task.py  ticket.py
src/db/models/: __init__.py  _division.py  _group.py  _message.py  _role.py  _task.py  _ticket.py  _user.py
src/settings/: __init__.py  app.py  database.py  keycloak.py  resolver.py
